--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,8 @@
-<router-outlet />
+<app-loading></app-loading>
+<div class="min-h-screen flex flex-col bg-cover bg-center" style="background-image: url('assets/img/fondo.jpg');">
+  <app-header></app-header>
+  <main class="flex-grow">
+    <router-outlet></router-outlet>
+  </main>
+  <app-footer></app-footer>
+</div>
