--- a/src/app/oraculo/components/lectura-carta/lectura-carta.component.html
+++ b/src/app/oraculo/components/lectura-carta/lectura-carta.component.html
@@ -1,8 +1,19 @@
 <!-- Contenido -->
 <div class="flex-grow container mx-auto py-4 px-2">
-  <h2 class="text-md font-bold text-gray-700 text-center mb-4">
-    Tu lectura de {{ numCartas }} carta(s)
+  <h2 class="text-md font-bold text-gray-700 mb-4 flex justify-between items-center">
+    <!-- Icono a la derecha -->
+    <button (click)="navigateToCarta()"
+      class="bg-indigo-800 hover:bg-indigo-700 text-white rounded-full p-3 shadow-lg transition focus:outline-none focus:ring-4 focus:ring-indigo-500">
+      <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor"
+        stroke-width="2">
+        <path stroke-linecap="round" stroke-linejoin="round" d="M15 19l-7-7 7-7" />
+      </svg>
+    </button>
+    
+    <!-- Texto centrado -->
+    <span class="flex-grow text-center">Tu lectura de {{ numCartas }} carta(s)</span>
   </h2>
+
 
   <!-- Mostrar cartas seleccionadas -->
   <div class="flex justify-center gap-6 flex-wrap">
