--- a/src/app/oraculo/components/seleccionar-carta/seleccionar-carta.component.html
+++ b/src/app/oraculo/components/seleccionar-carta/seleccionar-carta.component.html
@@ -1,6 +1,19 @@
 <!-- Contenido del formulario -->
 <div class="flex-grow container mx-auto py-6 px-4 overflow-y-auto">
-  <h2 class="text-md font-bold text-white text-center mb-6">Selecciona las cartas</h2>
+
+  <h2 class="text-md font-bold text-gray-700 mb-4 flex justify-between items-center">
+    <!-- Icono a la derecha -->
+    <button (click)="navigateToCarta()"
+      class="bg-indigo-800 hover:bg-indigo-700 text-white rounded-full p-3 shadow-lg transition focus:outline-none focus:ring-4 focus:ring-indigo-500">
+      <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor"
+        stroke-width="2">
+        <path stroke-linecap="round" stroke-linejoin="round" d="M15 19l-7-7 7-7" />
+      </svg>
+    </button>
+
+    <!-- Texto centrado -->
+    <span class="flex-grow text-center">Selecciona las cartas</span>
+  </h2>
 
   <!-- Contenedor de opciones con scroll -->
   <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6 max-h-[calc(100vh-200px)] overflow-y-auto">
