--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,13 @@
 <app-loading></app-loading>
 <div class="min-h-screen flex flex-col bg-cover bg-center" style="background-image: url('assets/img/fondo.jpg');">
-  <app-header></app-header>
+  
+  <!-- Solo mostrar el header si la ruta no es login o register -->
+  <app-header *ngIf="!isLoginOrRegister()"></app-header>
+  
   <main class="flex-grow">
     <router-outlet></router-outlet>
   </main>
-  <app-footer></app-footer>
+  
+  <!-- Solo mostrar el footer si la ruta no es login o register -->
+  <app-footer *ngIf="!isLoginOrRegister()"></app-footer>
 </div>
