--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -20,7 +20,7 @@
     </button>
     <!-- Menú desplegable -->
     <div class="absolute right-0 mt-2 w-48 bg-white text-gray-800 shadow-lg rounded-lg py-2" *ngIf="isMenuOpen">
-      <a href="#profile" class="block px-4 py-2 hover:bg-indigo-100">Ver Perfil</a>
+      <a href="dashboard/info-user" class="block px-4 py-2 hover:bg-indigo-100">Ver Perfil</a>
       <a href="#help" class="block px-4 py-2 hover:bg-indigo-100">Ayuda</a>
       <button class="block w-full text-left px-4 py-2 hover:bg-indigo-100" (click)="logout()">
         Cerrar Sesión
