--- a/src/app/dashboard/components/main/main.component.html
+++ b/src/app/dashboard/components/main/main.component.html
@@ -18,7 +18,7 @@
 
       <!-- Opción: Historial de Lectura -->
       <a
-        routerLink="/dashboard/historial-lectura"
+        routerLink="/carta/historial"
         class="block p-6 bg-white/80 backdrop-blur-md rounded-lg shadow-lg hover:shadow-xl transition-shadow hover:bg-blue-100/90 text-center"
       >
         <div class="text-[#0085C8] text-4xl mb-4">
