--- a/src/app/oraculo/components/lectura-carta/carta-modal/carta-modal.component.html
+++ b/src/app/oraculo/components/lectura-carta/carta-modal/carta-modal.component.html
@@ -1,26 +1,27 @@
-<div class="p-6 max-w-xl mx-auto bg-white rounded-lg shadow-lg overflow-hidden">
-  <!-- Título de la carta -->
-  <h2 class="text-2xl font-semibold text-center text-gray-900 mb-6">{{ data.carta.nombre }}</h2>
+<div class="p-8 max-w-3xl mx-auto bg-white rounded-lg shadow-lg overflow-hidden relative">
+  <!-- Botón de cerrar en el encabezado -->
+  <button
+    (click)="cerrar()"
+    class="absolute top-4 right-4 text-gray-400 hover:text-gray-600 transition-transform duration-200 ease-in-out"
+    aria-label="Cerrar"
+  >
+    <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
+      <path stroke-linecap="round" stroke-linejoin="round" d="M6 18L18 6M6 6l12 12" />
+    </svg>
+  </button>
 
-  <!-- Imagen de la carta más grande -->
+  <!-- Título de la carta -->
+  <h2 class="text-3xl font-bold text-center text-gray-900 mb-8">{{ data.carta.nombre }}</h2>
+
+  <!-- Imagen de la carta -->
   <img
     [src]="data.carta.url + data.carta.path || '/assets/img/carta_back.png'"
     alt="Imagen de la carta"
-    class="mx-auto mb-6 w-80 h-96 object-cover rounded-lg shadow-lg"
+    class="mx-auto mb-8 max-w-full h-auto object-cover rounded-lg shadow-lg"
   />
 
-  <!-- Lectura de la carta con scroll -->
-  <div class="text-gray-800 text-base text-justify leading-relaxed mb-6 max-h-64 overflow-y-auto">
+  <!-- Lectura de la carta -->
+  <div class="text-gray-800 text-lg text-justify leading-relaxed max-h-[70vh] overflow-y-auto p-4 bg-gray-100 rounded-lg shadow-inner">
     <p>{{ data.carta.lectura }}</p>
-  </div>
-
-  <!-- Botón de cerrar -->
-  <div class="text-center">
-    <button
-      (click)="cerrar()"
-      class="bg-[#0085C8] text-white py-3 px-8 rounded-full shadow-md hover:bg-[#006f99] transform transition duration-200 ease-in-out"
-    >
-      Cerrar
-    </button>
   </div>
 </div>
